--- a/app/src/main/res/layout/activity_devices.xml
+++ b/app/src/main/res/layout/activity_devices.xml
@@ -10,4 +10,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.user.yvd120901.DevicesActivity">
 
+    <Button
+        android:text="Start Scan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/button2"
+        android:onClick="click1" />
+
+    <Button
+        android:text="connect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button2"
+        android:layout_alignParentStart="true"
+        android:id="@+id/button3"
+        android:onClick="click2" />
 </RelativeLayout>
